--- a/_static/custom.css
+++ b/_static/custom.css
@@ -1,9 +1,11 @@
 div.logo {
-    margin-top: 2em;
+    margin-top: 1em;
 }
 div.logo img {
     display: block;
     margin: 0;
+    border-radius: 50%;
+    height: 150px;
 }
 div.snippet {
     font-size: 1em;
