--- a/_static/custom.css
+++ b/_static/custom.css
@@ -14,6 +14,7 @@ div.title {
     font-size: 15px;
 }
 div.specialties {
+    margin-top: 5px
     font-size: 15px;
     border-top: 1px solid grey;
 }
